[package]
name = "vadim-queue"
version = "0.1.0"
authors = ["Arnav Singh <arsing@microsoft.com>"]
edition = "2021"


[dependencies]
arc-swap = { version = "1.5.0", optional = true, default-features = false }
event-listener = { version = "2.5.2", optional = true, default-features = false }
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
    "alloc", # for futures_util::stream::FuturesUnordered
] }
parking_lot = { version = "0.12.0", optional = true, default-features = false }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }


[features]
lock_lock_build = ["parking_lot"]
lock_lock_default = ["lock_lock_build"]

lock_swap_build = ["arc-swap", "parking_lot"]
lock_swap_default = ["lock_swap_build"]

swap_lock_build = ["arc-swap", "parking_lot"]
swap_lock_default = ["swap_lock_build"]

swap_swap_build = ["arc-swap"]
swap_swap_default = ["swap_swap_build"]

waker_strategy_event_listener_build = ["event-listener"]
waker_strategy_event_listener_default = ["waker_strategy_event_listener_build"]

waker_strategy_mutex_vec_waker_build = ["parking_lot"]
waker_strategy_mutex_vec_waker_default = ["waker_strategy_mutex_vec_waker_build"]


[profile.release]
panic = "abort"
